--- a/index.html
+++ b/index.html
@@ -10,73 +10,14 @@
 	</head>
 	<body>
 
-		<!-- sketch -->
-		<!-- <script src="js/config.js"></script> -->
 		<div id="frame">
 			<!-- <h1>Something inside</h1> -->
 			<!-- <canvas id="canvas"></canvas> -->
 			<canvas id="canvas"></canvas>
 		</div>
 
-		<!-- <div id ="title">
-			<h1>Shell</h1>
-			<p>A small window for creative coding and shaders</p>
-		</div> -->
-		<script type="module">
-
-		let THREEPATH = '/lib/three';
-
-		import * as THREE from '/lib/three/build/three.module.js';
-
-		import { GUI } from '/lib/three/examples/jsm/libs/dat.gui.module.js';
-
-		import { OrbitControls } from '/lib/three/examples/jsm/controls/OrbitControls.js';
-		import { EffectComposer } from '/lib/three/examples/jsm/postprocessing/EffectComposer.js';
-		import { RenderPass } from '/lib/three/examples/jsm/postprocessing/RenderPass.js';
-		import { ShaderPass } from '/lib/three/examples/jsm/postprocessing/ShaderPass.js';
-		import { PixelShader } from '/lib/three/examples/jsm/shaders/PixelShader.js';
-
-
-
-		var container = document.getElementById( "canvas" );
-		// console.log(container);
-		// document.body.appendChild( container );
-
-		//common
-		var scene = new THREE.Scene();
-		var camera = new THREE.PerspectiveCamera( 75, 600 / 600, 0.1, 1000 );
-
-		var renderer = new THREE.WebGLRenderer({ antialias: true, canvas: container });
-		renderer.setPixelRatio( window.devicePixelRatio );
-		renderer.setSize( 600,600);
-		// container.appendChild( renderer.domElement );
-		// var composer = new THREE.EffectComposer( renderer );
-
-		//box
-		var geometry = new THREE.BoxBufferGeometry( 1, 1, 1 );
-		var wireframe = new THREE.WireframeGeometry( geometry );
-		var cube = new THREE.LineSegments( wireframe );
-		scene.add( cube );
-
-		//camera
-		camera.position.z = 2.5;
-
-		//animate
-		function animate() {
-			requestAnimationFrame( animate );
-			renderer.render( scene, camera );
-		  cube.rotation.x += 0.01;
-		  cube.rotation.y += 0.01;
-
-		  // mesh.rotation.x += 0.01;
-		}
-		animate();
+		<script type="module" src="js/pixelate.js">
 
 		</script>
-		<!-- <script src="three/three.js"></script>
-		<script src="three/EffectComposer.js"></script>
-		<script src="three/DotScreenPass.js"></script> -->
-
-		<!-- <script src="js/scene.js"></script> -->
 	</body>
 </html>
