--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		</div>
 
 		<script type="module" src="js/pixelate.js">
+		<!-- <script type="module" src="js/PixelateFlow.js"> -->
 
 		</script>
 	</body>
