structure/helpers/models

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<canvas id="canvas"></canvas>
 		</div>
 
-		<script type="module" src="js/pixelate.js">
+		<script type="module" src="js/Pixelate.js">
 		<!-- <script type="module" src="js/PixelateFlow.js"> -->
 
 		</script>
