archived renamed some things

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 			<canvas id="canvas"></canvas>
 		</div>
 
-		<script type="module" src="js/Pixelate.js">
-		<!-- <script type="module" src="js/PixelateFlow.js"> -->
+		<script type="module" src="js/Main.js">
 
 		</script>
 	</body>
